/* 
  Localizable.strings
  Uni Saar

  Created by Ali Al-Hasani on 12/19/19.
  Copyright © 2019 Ali Al-Hasani. All rights reserved.
*/

//MARK:- extension UIAlertController
"AlertTitle" = "Alert";
"AlertOkActionTitle" = "Ok";
"AlertYesActionTitle" = "Yes";
"AlertNoActionTitle" = "No";
"AlertCancelActionTitle" = "Cancel";
"AlertContinueActionTitle" = "Continue";

//MARK:- DataClient API
"UnknownError" = "Sorry, something went wrong. Please try again later.";

//MARK: - Catch general API
"generalAPIError" = "An error has occurred and we're working to fix it. Please try again later.";

//MARK:- MensaViewController
"emptyMenu" = "It looks like there's no Mensa menu for today.";
"moreComponents" = "+%d more";
"HighlightAllergens" = "Highlight selected ingredients and dishes when they appear on menu";
"MensaLocations" = "Mensa Locations on Campus";
"WarnMeAbout" = "Warn me about ";
"contains" = "Contains ";

"EmptyNews" = "There are no news items passing your current filter settings.";
"EmptyEvents" = "No Events available";
"StaffSearch" = "University Staff Search";
"EmptyResults" = "No search results found";
"BuildingsSearch" = "Search for buildings";
"ChooseCampus" = "Choose your campus";


"newsFilter" = "Select which news categories you want to filter out";

//MARK:- MoreLinksViewModel
"AboutApp" = "About App";
"AppSettings" = "App Settings";
"EmptyLinks" = "No Links available";
"HelpfulNumbers" = "Helpful Contacts";


"MensaNotifications" = "Mensa Notifications";
"EnableFoodAlarm" = "Enable Food Alarm";
"TodayMensa" = "Today in Mensa";
"NotificationBody" = "A complete meal and vegetarian meal and variety of free flow meals, check now..";
"enableNotification" = "Please enable the notification permission in the app settings";
"dailyTime" = "the daily notification time is ";



"GitHubLinkText" = "Check the code of this open-source project on GitHub";
"GitHub" = "GitHub";


"Please hold your Mensa card near the NFC sensor." = "Please hold your Mensa card near the NFC sensor.";
"NFC Not Supported" = "NFC Not Supported";
"This device doesn't support NFC tag scanning." = "This device doesn't support NFC tag scanning.";



"RateTitle" =  "Rate The App";
"EnjoyingAPP" = "Do you enjoy using the new Uni app?";
"RateYesActionTitle" = "Yes, review the app";
"RateNoActionTitle" = "No, thanks";


"tryAgain" = "Try Again";

//MARK:- Screen titles (migrated from storyboard strings)
"NewsFeedTitle" = "News Feed";
"EventsTitle" = "Events";
"EventsCount" = "%d events";
"PreviousMonth" = "Previous month";
"NextMonth" = "Next month";
"FilterFeedTitle" = "Filter Feed";
"FilterDoneButton" = "Done";
"FilterMensaTitle" = "Filter Mensa";
"MensaBalanceTitle" = "Mensa Balance";
"SettingsTitle" = "Settings";
"TabNews" = "News Feed";
"TabDirectory" = "Directory";
"TabMore" = "More";
"TabCampus" = "Campus";
"TabMensa" = "Mensa";

//MARK:- Directory
"DirectorySearchTip" = "Tip: a basic search requires at least three characters of a person's name";
"StaffAddress" = "Address";
"StaffContact" = "Contact";

//MARK:- Mensa card / balance
"MensaCurrentBalance" = "Current Balance";
"MensaLastTransaction" = "Last Transaction";
"MensaScanDate" = "Scan Date";
"MensaCardID" = "Card ID";
"MensaNoCardScanned" = "No Card Scanned";
"ScanCard" = "Scan Card";

//MARK:- Meal details
"MealComponents" = "Components";
"MealPrices" = "Prices";
"MealGeneralNotices" = "General Notices";

//MARK:- Notifications
"PickNotificationTime" = "Pick the notification time";

//MARK:- More / About
"UsefulLinks" = "Useful Links";
"DevelopmentTeam" = "Development Team";
"iOSTeamLabel" = "iOS, iPadOS and macOS design and implementation:";
"ServerTeamLabel" = "Server Team:";
"LearnMoreLabel" = "Learn more about us";
"FindUsLabel" = "Get to know more about us by searching \"Cool guys\" in the directory";
