...
        guard NFCTagReaderSession.readingAvailable else {
            let alertController = UIAlertController(
                title: String(localized: "NFC Scanning Not Supported"),
                message: String(localized: "This device doesn't support NFC tag scanning."),
                preferredStyle: .alert
            )
            alertController.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
            present(alertController, animated: true)
            return
        }

        nfcController = MensaNfcController(viewController: self)
        session = NFCTagReaderSession(pollingOption: .iso14443, delegate: nfcController!)
...
